# ceramic

./: .git-blame-ignore-revs  .gitattributes  .gitignore  404.html  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  README.md  index.html  mkdocs.yml  sitemap.xml
.cache/clangd/index/: ADL.h.837B85D67E3DA5FD.idx  APFloat.h.F9BC44797E6F255C.idx  APInt.h.1B012F4E122016EF.idx  APSInt.h.0C2E3C09197EA15E.idx  AlignOf.h.5BBFA707C0AFD0D5.idx  Alignment.h.D00B01D3C3F5DCCE.idx  AllocationActions.h.DC6EA168C4A1E695.idx  Allocator.h.0F4836BAF1DC47C7.idx  AllocatorBase.h.B510DBB1334B4340.idx  Analysis.h.DB06724EAD101878.idx  Any.h.D38311F8B8A0B35F.idx  Archive.h.5E1D84F664F2D827.idx  Argument.h.40DD06D3E7B601DD.idx  ArrayRecycler.h.71710C6BC32245D4.idx  ArrayRef.h.5B455A153E895158.idx  AsmParsers.def.C82C87697F19CA44.idx  AsmPrinters.def.6140E54EBA0508F4.idx  AtomicOrdering.h.974B893CEFAA2CFB.idx  Attributes.h.472CC3DF8B3CFB2C.idx  Attributes.inc.FF83980F4E48F0D8.idx  BasicBlock.h.02293C77D285B11A.idx  Binary.h.0318463666DDDFD6.idx  BinaryStream.h.539FE7BD9316BBBB.idx  BinaryStreamArray.h.4301C901061A228F.idx  BinaryStreamError.h.FFDB7842AF5C92A8.idx  BinaryStreamReader.h.B2EA8FC55817BC88.idx  BinaryStreamRef.h.41580513C482DB64.idx  BinaryStreamWriter.h.D4B9D6CBE3634F55.idx  BitVector.h.FDD0D37F84323859.idx  BitcodeWriter.h.4BFD2F750ED13658.idx  BitcodeWriterPass.h.3B858D5C9E072CCE.idx  Bitfields.h.4AB8936F087AB36B.idx  BitmaskEnum.h.64064E86C334605E.idx  BranchProbability.h.D913431093C7DE12.idx  CBindingWrapping.h.90F3E08C6668E07A.idx  CFG.h.1DEB04B3927556C2.idx  CFGDiff.h.AB847F97597F6ABB.idx  CFGUpdate.h.0EA73D6698345EBA.idx  CGPassBuilderOption.h.C59CAE80F83379AA.idx  CGSCCPassManager.h.3F9468C8DBFBD2F0.idx  (+543 more)
.github/workflows/: build-skip.yml  build.yml  docs.yml  release.yml
assets/: ceramic-light.json  ceramic.tmLanguage.json
compiler/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  analyzer_op.cpp  analyzer_op.hpp  ceramic.cpp  ceramic.hpp  ceramicdoc.cpp  ceramicdoc.hpp  checkedcast.hpp  clay.cpp  clay.hpp  claydoc.cpp  claydoc.hpp  clone.cpp  clone.hpp  codegen.cpp  codegen.hpp  codegen_op.cpp  codegen_op.hpp  constructors.cpp  constructors.hpp  desugar.cpp  desugar.hpp  diagnostic.cpp  diagnostic.hpp  env.cpp  env.hpp  error.cpp  error.hpp  evaluator.cpp  evaluator.hpp  evaluator_op.cpp  evaluator_op.hpp  externals.cpp  externals.hpp  hirestimer.cpp  hirestimer.hpp  html.cpp  int128.hpp  (+34 more)
doc/: index.md  language-reference.md  primitives-reference.md  tour.md
doc/_archive/: primitives-reference.md
doc/assets/: ceramic-light.json  ceramic.tmLanguage.json
doc/js/: ceramic-highlight.js
doc/language-reference/: compilation.md  expressions.md  functions.md  grammar.md  index.md  modules.md  statements.md  tokenization.md  types.md
doc/primitives-reference/: atomic.md  compiler.md  data-access.md  exceptions.md  index.md  introspection.md  multiple-values.md  numeric.md  pointers.md  types.md
doc/stylesheets/: extra.css
editor-support/: SyntaxHighlightingExample.crm
editor-support/emacs/: README.txt  ceramic-mode.el
editor-support/gtksourceview/: Makefile  README.md  ceramic.lang  ceramic.xml
editor-support/vim/: README.txt
editor-support/vim/ftdetect/: ceramic.vim
editor-support/vim/plugin/: ceramic.vim
editor-support/vim/syntax/: ceramic.vim
editor-support/vscode/: language-configuration.json  package.json
editor-support/vscode/ceramic-language/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
editor-support/vscode/syntaxes/: ceramic.tmLanguage.json
examples/: tinyhello.ceramic  tinyhello.crm
examples/cocoa/appkit/: Info.plist  Makefile
examples/raylib/: basic.crm
examples/shootout/binarytrees/: Makefile  binarytrees.crm
examples/shootout/fannkuch/: Makefile  fannkuch.crm
examples/shootout/mandelbrot/: Makefile  mandelbrot.crm  mandelbrot_non_simd.crm
examples/shootout/nbody/: Makefile  nbody.crm
examples/shootout/spectralnorm/: Makefile  spectralnorm_non_simd.crm
examples/win32/: wndproc.ceramic
language-reference/: index.html
language-reference/compilation/: index.html
language-reference/expressions/: index.html
language-reference/functions/: index.html
language-reference/grammar/: index.html
language-reference/modules/: index.html
language-reference/statements/: index.html
language-reference/tokenization/: index.html
language-reference/types/: index.html
lib-ceramic/buffervector/: buffervector.ceramic
lib-ceramic/byteorder/: byteorder.x86.32.crm  byteorder.x86.64.crm
lib-ceramic/cocoa/foundation/: foundation.ceramic
lib-ceramic/cocoa/objc/: objc.ceramic
lib-ceramic/core/enumerations/: enumerations.ceramic
lib-ceramic/core/errors/: errors.ceramic
lib-ceramic/core/exceptions/: exceptions.ceramic  exceptions.crm
lib-ceramic/core/operators/: operators.crm
lib-ceramic/core/ranges/: ranges.crm
lib-ceramic/core/system/: system.crm
lib-ceramic/core/values/: values.ceramic
lib-ceramic/printer/: printer.crm
lib-ceramic/raylib/: generated.crm  raylib.crm
lib-ceramic/simd/: simd.ceramic  simd.crm
lib-ceramic/twohash/: twohash.ceramic  twohash.crm
lib-clay/complex/: complex.clay
lib-clay/hash/: hash.clay
lib-clay/lambdas/: lambdas.clay
lib-clay/referencetypes/: referencetypes.clay
lib-clay/sharedpointers/: sharedpointers.clay
lib-clay/uniquepointers/: uniquepointers.clay
lib-clay/win32/: win32.clay
primitives-reference/: index.html
primitives-reference/atomic/: index.html
primitives-reference/compiler/: index.html
primitives-reference/data-access/: index.html
primitives-reference/exceptions/: index.html
primitives-reference/introspection/: index.html
primitives-reference/multiple-values/: index.html
primitives-reference/numeric/: index.html
primitives-reference/pointers/: index.html
primitives-reference/types/: index.html
search/: search_index.json
stylesheets/: extra.css
test/: runtests.py  test-installation.py
tools/: CMakeLists.txt  bindgen.ceramic  bindgen.crm  build-script
(+300 files in other folders)
